--- a/android/assets/jsons/translations/Romanian.properties
+++ b/android/assets/jsons/translations/Romanian.properties
@@ -4989,30 +4989,30 @@ in cities with at least [amount] [populationFilter] =
 God of the Open Sky = 
 
  # Requires translation!
-God of the Sea = 
+God of the Sea = Zeul mării
 
  # Requires translation!
-God of War = 
+God of War = Zeul războiului
  # Requires translation!
 Earn [amount]% of [mapUnitFilter] unit's [costOrStrength] as [civWideStat] when killed within 4 tiles of a city following this religion = 
 
  # Requires translation!
-Goddess of Festivals = 
+Goddess of Festivals = Zeița festivalelor
 
  # Requires translation!
-Goddess of Love = 
+Goddess of Love = Zeița dragostei
 
  # Requires translation!
-Goddess of Protection = 
+Goddess of Protection = Zeița protecției
 
  # Requires translation!
-Goddess of the Hunt = 
+Goddess of the Hunt = Zeița vânătorii
 
  # Requires translation!
-Messenger of the Gods = 
+Messenger of the Gods = Mesagerul zeilor
 
  # Requires translation!
-Monument to the Gods = 
+Monument to the Gods = Monumentul zeilor
 
  # Requires translation!
 One with Nature = 
@@ -5021,7 +5021,7 @@ One with Nature =
 Oral Tradition = 
 
  # Requires translation!
-Religious Idols = 
+Religious Idols = Idoli religioși
 
  # Requires translation!
 Religious Settlements = 
@@ -5043,7 +5043,7 @@ Follower =
 Asceticism = 
 
  # Requires translation!
-Cathedrals = 
+Cathedrals = Catedrale
  # Requires translation!
 May buy [buildingFilter] buildings with [stat] [cityFilter] = 
 
@@ -5051,10 +5051,10 @@ May buy [buildingFilter] buildings with [stat] [cityFilter] =
 Choral Music = 
 
  # Requires translation!
-Divine inspiration = 
+Divine inspiration = Inspirație divină
 
  # Requires translation!
-Feed the World = 
+Feed the World = Hrănește lumea
 
  # Requires translation!
 Guruship = 
@@ -5084,13 +5084,13 @@ Pagodas =
 Peace Gardens = 
 
  # Requires translation!
-Religious Art = 
+Religious Art = Artă religioasă
 
  # Requires translation!
-Religious Center = 
+Religious Center = Centru religios
 
  # Requires translation!
-Religious Community = 
+Religious Community = Comunitate religioasă
  # Requires translation!
 [relativeAmount]% [stat] from every follower, up to [relativeAmount2]% = 
 
