--- a/android/assets/jsons/translations/Romanian.properties
+++ b/android/assets/jsons/translations/Romanian.properties
@@ -4298,7 +4298,7 @@ Volley =
 
 Extended Range = Rază extinsă
  # Requires translation!
-[amount] Range = 
+[amount] Range = Rază
 
 Indirect Fire = Foc indirect
  # Requires translation!
@@ -4482,27 +4482,27 @@ Sortie =
 Operational Range = 
 
  # Requires translation!
-Helicopter = 
+Helicopter = Elicopter
  # Requires translation!
 Air Repair = 
 
  # Requires translation!
-Mobility I = 
+Mobility I = Mobilitate I
 
  # Requires translation!
-Mobility II = 
+Mobility II = Mobilitate II
 
  # Requires translation!
-Anti-Armor I = 
+Anti-Armor I = Anti-Armură I
 
  # Requires translation!
-Anti-Armor II = 
+Anti-Armor II = Anti-Armură II
 
  # Requires translation!
-Cover I = 
+Cover I = Acoperire I 
 
  # Requires translation!
-Cover II = 
+Cover II = Acoperire II
 
 March = Marș
 
@@ -4525,7 +4525,7 @@ Bombardment II = Bombardament II
 Bombardment III = Bombardament III
 
  # Requires translation!
-Morale = 
+Morale = Morală
 
  # Requires translation!
 Great Generals I = 
@@ -4534,7 +4534,7 @@ Great Generals I =
 Great Generals II = 
 
  # Requires translation!
-Quick Study = 
+Quick Study = Studiu rapid
 
  # Requires translation!
 Haka War Dance = 
@@ -4557,7 +4557,7 @@ Ignores terrain cost = Ignoră costul terenului
 Pictish Courage = 
 
  # Requires translation!
-Home Sweet Home = 
+Home Sweet Home = Casa dulce casă
  # Requires translation!
 [relativeAmount]% Strength decreasing with distance from the capital = 
 
@@ -4584,7 +4584,7 @@ Can see invisible [mapUnitFilter] units =
  # Requires translation!
 Aircraft = 
  # Requires translation!
-Can see over obstacles = 
+Can see over obstacles = Poate vedea peste obstacole
  # Requires translation!
 Can perform Air Sweep = 
 
@@ -4643,7 +4643,7 @@ This is your basic, club-swinging fighter. =
 Maori Warrior = Războinic Maori
 
  # Requires translation!
-Jaguar = 
+Jaguar = Jaguar
 
 Brute = Brut(ă)
 
@@ -4710,7 +4710,7 @@ Camel Archer = Arcaș pe cămilă
  # Requires translation!
 Conquistador = 
  # Requires translation!
-on foreign continents = 
+on foreign continents = Pe continente străine
 
  # Requires translation!
 Naresuan's Elephant = 
@@ -4784,7 +4784,7 @@ Foreign Legion = Legiunea Străină
 
 Carrier = Portavion
  # Requires translation!
-Cannot attack = 
+Cannot attack = Nu poate ataca
  # Requires translation!
 Can carry [amount] [mapUnitFilter] units = 
 
@@ -4989,30 +4989,30 @@ in cities with at least [amount] [populationFilter] =
 God of the Open Sky = 
 
  # Requires translation!
-God of the Sea = 
+God of the Sea = Zeul mării
 
  # Requires translation!
-God of War = 
+God of War = Zeul războiului
  # Requires translation!
 Earn [amount]% of [mapUnitFilter] unit's [costOrStrength] as [civWideStat] when killed within 4 tiles of a city following this religion = 
 
  # Requires translation!
-Goddess of Festivals = 
+Goddess of Festivals = Zeița festivalelor 
 
  # Requires translation!
-Goddess of Love = 
+Goddess of Love = Zeița dragostei 
 
  # Requires translation!
-Goddess of Protection = 
+Goddess of Protection = Zeița protecției 
 
  # Requires translation!
-Goddess of the Hunt = 
+Goddess of the Hunt = Zeița vânătorii 
 
  # Requires translation!
-Messenger of the Gods = 
+Messenger of the Gods = Mesagerul zeilor 
 
  # Requires translation!
-Monument to the Gods = 
+Monument to the Gods = Monument către zei
 
  # Requires translation!
 One with Nature = 
@@ -5051,10 +5051,10 @@ May buy [buildingFilter] buildings with [stat] [cityFilter] =
 Choral Music = 
 
  # Requires translation!
-Divine inspiration = 
+Divine inspiration = Inspirație divină 
 
  # Requires translation!
-Feed the World = 
+Feed the World = Hrănește lumea
 
  # Requires translation!
 Guruship = 
@@ -5062,7 +5062,7 @@ Guruship =
  # Requires translation!
 Holy Warriors = 
  # Requires translation!
-before the [era] = 
+before the [era] = înaintea [era]
  # Requires translation!
 May buy [baseUnitFilter] units with [stat] for [amount] times their normal Production cost = 
 
