--- a/android/assets/jsons/translations/Romanian.properties
+++ b/android/assets/jsons/translations/Romanian.properties
@@ -101,7 +101,7 @@ Leads to [techName] = Duce la [techName]
 Leads to: = Duce la:
 Enables: = Permite:
  # Requires translation!
-Disables: = 
+Disables: = Dezactivează:
 
 Current construction = Construcția curentă
 Construction queue = Coada de construcții
@@ -312,7 +312,7 @@ National ability = Abilitate națională
  # Requires translation!
 Gained = 
  # Requires translation!
-Lost = 
+Lost = Pierdut
 
 
 # New game screen
@@ -766,13 +766,13 @@ UI =
  # Requires translation!
 Notifications on world screen = 
  # Requires translation!
-Disabled = 
+Disabled = Dezactivat
  # Requires translation!
-Hidden = 
+Hidden = Ascuns
  # Requires translation!
-Visible = 
+Visible = Vizibil
  # Requires translation!
-Permanent = 
+Permanent = Permanent
 
  # Requires translation!
 Minimap size = 
@@ -1380,9 +1380,9 @@ Add or move to the top in all cities =
  # Requires translation!
 Remove from the queue in all cities = 
  # Requires translation!
-Disable = 
+Disable = Dezactivează
  # Requires translation!
-Enable = 
+Enable = Activează
 
 # Specialized Popups - Ask for text or numbers, file picker
 
@@ -2559,9 +2559,9 @@ before founding a Pantheon =
  # Requires translation!
 after founding a Pantheon = 
  # Requires translation!
-before founding a religion = 
+before founding a religion = înaintea fondării unei religii
  # Requires translation!
-after founding a religion = 
+after founding a religion = după fondarea unei religii
  # Requires translation!
 before enhancing a religion = 
  # Requires translation!
